[package]
name = "registry-non-epp"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = { version = "4", features = ["openssl"] }
openssl = { version = "0.10" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = "0.26"
toml = "0.5"
chrono = "0.4"
openssl = "0.10"
